--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,9 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <!-- <div id="app"></div> -->
+
+    <a href="/commit-message-generator/">test</a>
+    <!-- <script type="module" src="/src/main.ts"></script> -->
   </body>
 </html>
