📂 chore: install Tailwind CSS and set up some files #3

--- a/commit-message-generator/index.html
+++ b/commit-message-generator/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>commit-message-generator</title>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    commit-message-generator hello
+    <h1 class="text-red-700 text-3xl">Commit Easily</h1>
 
     <script type="module" src="src/test.ts"></script>
   </body>
