--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <!-- <div id="app"></div> -->
+    <h1 class="text-red-100">aaa</h1>
+    test
 
     <a href="/commit-message-generator/">test</a>
     <!-- <script type="module" src="/src/main.ts"></script> -->
