📂 chore: setup config and HTML, CSS, TypeScript #9

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <h1 class="text-red-100">aaa</h1>
     test
 
-    <a href="/commit-message-generator/">test</a>
+    <ul>
+      <li>
+        <a href="/commit-message-generator/">commit-message-generator</a>
+      </li>
+      <li>
+        <a href="/simple-modal/">simplemodal</a>
+      </li>
+    </ul>
     <!-- <script type="module" src="/src/main.ts"></script> -->
   </body>
 </html>
