--- a/simple-modal/index.html
+++ b/simple-modal/index.html
@@ -1,12 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Modal</title>
-</head>
-<body>
-  
-  <script src="src/main.ts"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simple Modal</title>
+    <link rel="stylesheet" href="src/style.css" />
+  </head>
+  <body
+    class="bg-stone-900 flex items-center justify-center min-h-screen text-stone-200"
+  >
+    <button
+      id="open-modal"
+      class="rounded-lg block bg-violet-800 text-violet-50/60 px-8 py-2 shadow-xl shadow-violet-900 hover:text-violet-100 hover:bg-violet-600 hover:shadow-violet-700 duration-300"
+    >
+      Click Me
+    </button>
+
+    <div
+      id="modal"
+      class="bg-stone-800/60 p-8 rounded-lg w-3/6 fixed top-[50%] left-0 right-0 translate-y-[-50%] mx-auto backdrop-blur-md shadow-inner shadow-stone-800 opacity-0 pointer-events-none duration-300"
+    >
+      <p class="text-center">Which color do you like?</p>
+
+      <div class="flex gap-4 w-full justify-center mt-6">
+        <button
+          class="rounded-lg block bg-sky-800 text-sky-50/60 px-8 py-2 shadow-xl shadow-sky-900 hover:text-sky-100 hover:bg-sky-600 hover:shadow-sky-700 duration-300"
+        >
+          Sky
+        </button>
+
+        <button
+          class="rounded-lg block bg-yellow-800 text-yellow-50/60 px-8 py-2 shadow-xl shadow-yellow-900 hover:text-yellow-100 hover:bg-yellow-600 hover:shadow-yellow-700 duration-300"
+        >
+          Yellow
+        </button>
+      </div>
+
+      <div class="text-center mt-4">
+        <button
+          id="close-modal"
+          class="text-stone-500 hover:text-stone-300 duration-300 text-sm"
+        >
+          I choose neither.
+        </button>
+      </div>
+    </div>
+
+    <script src="src/main.ts"></script>
+  </body>
 </html>
