--- a/simple-modal/index.html
+++ b/simple-modal/index.html
@@ -8,16 +8,16 @@
   </head>
   <body class="bg-stone-900 flex items-center justify-center min-h-screen text-stone-200">
     <div id="button-wrapper">
-      <button id="open-modal-button" class="rounded-lg block bg-pink-800 text-pink-50/60 px-8 py-2 shadow-xl shadow-pink-900 hover:text-pink-100 hover:bg-pink-600 hover:shadow-pink-700 duration-300">Click Me</button>
+      <button id="open-modal-button" class="rounded-lg block bg-pink-800 text-pink-50/60 px-8 py-2 shadow-xl shadow-pink-900 hover:text-pink-100 hover:bg-pink-600 hover:shadow-pink-700 duration-300">Click Me 🥰</button>
     </div>
 
-    <div id="modal" class="bg-stone-800/60 p-8 rounded-lg w-3/6 fixed top-[50%] left-0 right-0 translate-y-[-50%] mx-auto backdrop-blur-md shadow-inner shadow-stone-800 opacity-0 pointer-events-none duration-300">
+    <div id="modal" class="bg-stone-800/60 p-8 rounded-lg max-w-lg w-11/12 fixed top-[50%] left-0 right-0 translate-y-[-50%] mx-auto backdrop-blur-md shadow-inner shadow-stone-800 opacity-0 pointer-events-none duration-300">
       <p class="text-center">Which color do you like?</p>
 
       <div class="flex gap-4 w-full justify-center mt-6">
-        <button id="sky-button" class="rounded-lg block bg-sky-800 text-sky-50/60 px-8 py-2 shadow-xl shadow-sky-900 hover:text-sky-100 hover:bg-sky-600 hover:shadow-sky-700 duration-300">Sky</button>
+        <button id="sky-button" class="rounded-lg block bg-sky-800 text-sky-50/60 px-8 py-2 shadow-xl shadow-sky-900 hover:text-sky-100 hover:bg-sky-600 hover:shadow-sky-700 duration-300">Sky 🚀</button>
 
-        <button id="yellow-button" class="rounded-lg block bg-yellow-800 text-yellow-50/60 px-8 py-2 shadow-xl shadow-yellow-900 hover:text-yellow-100 hover:bg-yellow-600 hover:shadow-yellow-700 duration-300">Yellow</button>
+        <button id="yellow-button" class="rounded-lg block bg-yellow-800 text-yellow-50/60 px-8 py-2 shadow-xl shadow-yellow-900 hover:text-yellow-100 hover:bg-yellow-600 hover:shadow-yellow-700 duration-300">Yellow 👘</button>
       </div>
 
       <div class="text-center mt-4">
