🚧 wip: fix build settings #9

--- a/simple-modal/index.html
+++ b/simple-modal/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Modal</title>
-    <link rel="stylesheet" href="src/style.css" />
+    <!-- <link rel="stylesheet" href="src/style.css" /> -->
   </head>
   <body class="bg-stone-900 flex items-center justify-center min-h-screen text-stone-200">
     <div id="button-wrapper">
@@ -25,6 +25,6 @@
       </div>
     </div>
 
-    <script src="src/main.ts"></script>
+    <script src="./src/main.ts" type="module"></script>
   </body>
 </html>
