--- a/simple-modal/index.html
+++ b/simple-modal/index.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="text-center mt-4">
-        <button id="close-modal" class="text-stone-500 hover:text-stone-300 duration-300 text-sm">I choose neither.</button>
+        <button id="close-modal" class="text-stone-500 hover:text-stone-300 duration-300 text-sm">I choose neither..</button>
       </div>
     </div>
 
