--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
-    <link rel="stylesheet" href="src/style.css" />
+    <!-- <link rel="stylesheet" href="./src/style.css" /> -->
   </head>
   <body>
     <!-- <div id="app"></div> -->
@@ -14,12 +14,12 @@
 
     <ul>
       <li>
-        <a href="/commit-message-generator/">commit-message-generator</a>
+        <a href="./commit-message-generator/">commit-message-generator</a>
       </li>
       <li>
-        <a href="/simple-modal/">simplemodal</a>
+        <a href="./simple-modal/">simplemodal</a>
       </li>
     </ul>
-    <!-- <script type="module" src="/src/main.ts"></script> -->
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
