🚧 wip: create random quote folder #18

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     test
 
     <ul>
-      <li>
+      <!-- <li>
         <a href="./commit-message-generator/">commit-message-generator</a>
+      </li> -->
+      <li>
+        <a href="./simple-modal/">Simple Neon Modal</a>
       </li>
       <li>
-        <a href="./simple-modal/">simplemodal</a>
+        <a href="./random-quote/">Random Quote</a>
       </li>
     </ul>
     <script type="module" src="/src/main.ts"></script>
