--- a/random-quote/index.html
+++ b/random-quote/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Random Quote</h1>
-    <div class="card">
+    <div class="card col-sm-6">
       <div class="card-header">Quote</div>
       <div class="card-body">
         <blockquote class="blockquote mb-0">
