🚧 wip: implement by myself #18
next refactor

--- a/random-quote/index.html
+++ b/random-quote/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Random Quote</h1>
-    <div class="card col-sm-6">
-      <div class="card-header">Quote</div>
+    <h1 class="fs-1 text-center mt-5">Random Quote</h1>
+    <div class="card col-sm-6 mx-auto mt-5">
+      <div class="card-header">Quote id:<span id="quote-id"></span></div>
       <div class="card-body">
         <blockquote class="blockquote mb-0">
-          <p>A well-known quote, contained in a blockquote element.</p>
-          <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <p id="quote"></p>
+          <footer class="blockquote-footer" id="author"><cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
