🚧 wip: fetch data #8

--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
-    <!-- <link rel="stylesheet" href="./src/style.css" /> -->
-  </head>
-  <body>
-    <!-- <div id="app"></div> -->
-    <h1 class="text-red-100">aaa</h1>
-    test
 
-    <ul>
-      <!-- <li>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + TS</title>
+  <!-- <link rel="stylesheet" href="./src/style.css" /> -->
+</head>
+
+<body>
+  <!-- <div id="app"></div> -->
+  <h1 class="text-red-100">aaa</h1>
+  test
+
+  <ul>
+    <!-- <li>
         <a href="./commit-message-generator/">commit-message-generator</a>
       </li> -->
-      <li>
-        <a href="./simple-modal/">Simple Neon Modal</a>
-      </li>
-      <li>
-        <a href="./random-quote/">Random Quote</a>
-      </li>
-    </ul>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <li>
+      <a href="./simple-modal/">Simple Neon Modal</a>
+    </li>
+    <li>
+      <a href="./random-quote/">Random Quote</a>
+    </li>
+    <li>
+      <a href="./favorite-music-sptify/">Favorite Music</a>
+    </li>
+  </ul>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
